# fabemia2

./: .gitignore  README.md  package.xml  rosgraph.dot  rosgraph_nodes_only.dot  setup.cfg  setup.py
log/: latest_build  latest_list
my_robot_bringup/: package.xml
my_robot_bringup/config/: gazebo_bridge.yaml
my_robot_bringup/launch/: my_robot_gazebo.launch.xml
my_robot_bringup/scripts/: camera_follower.py
my_robot_bringup/worlds/: test_world.sdf
my_robot_description/: CMakeLists.txt  package.xml
my_robot_description/launch/: display.launch.xml
my_robot_description/rviz/: urdf_config.rviz
my_robot_description/urdf/: camera.xacro  common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  test.urdf
src/: README.md
src/log/: latest_list
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_bringup/config/: gazebo_bridge.yaml
src/my_robot_bringup/launch/: coloured.launch.xml  my_robot_gazebo.launch.xml  test_box_spawn.launch.xml
src/my_robot_bringup/scripts/: box_spawner.py  camera_follower.py  config.py  deliver_robot_tsp_client.py  main.py  random_box_spawner.py  tsp_config.py  tsp_route_calculator.py  tsp_solver_node.py
src/my_robot_bringup/scripts/tsp_solver/: brute_force.py  deliver_robot_tsp_client.py  tsp_route_calculator.py
src/my_robot_bringup/worlds/: coloured_world.sdf  hello_world.sdf
src/my_robot_description/urdf/: camera.xacro  cameraBL.xacro  cameraBM.xacro  (+5 more)
src/tsp_solver/: tsp_route_calculator.py
tsp_solver/: deliver_robot_tsp_client.py  tsp_route_calculator.py  tsp_solver_node.py
worlds/: hello_world.sdf
